// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks / Adjacent Post Links Poem Integration shall pass integration sanity test | next post only 1`] = `
"<div class=\\"adjacent-post-links-poem\\">
  <!---->
  <nuxtlink to=\\"/poezja-314/mock-post/\\" class=\\"adjacent-post-links-poem__next adjacent-post-link adjacent-post-link--next\\"><span class=\\"adjacent-post-link__title\\">Biznes</span> <span class=\\"adjacent-post-link__label\\">Następna</span></nuxtlink>
</div>"
`;

exports[`Blocks / Adjacent Post Links Poem Integration shall pass integration sanity test | prev / next post 1`] = `
"<div class=\\"adjacent-post-links-poem\\">
  <nuxtlink to=\\"/poezja-314/mock-post/\\" class=\\"adjacent-post-links-poem__previous adjacent-post-link adjacent-post-link--previous\\"><span class=\\"adjacent-post-link__title\\">Biznes</span> <span class=\\"adjacent-post-link__label\\">Poprzednia</span></nuxtlink>
  <nuxtlink to=\\"/poezja-314/mock-post/\\" class=\\"adjacent-post-links-poem__next adjacent-post-link adjacent-post-link--next\\"><span class=\\"adjacent-post-link__title\\">Biznes</span> <span class=\\"adjacent-post-link__label\\">Następna</span></nuxtlink>
</div>"
`;

exports[`Blocks / Adjacent Post Links Poem Integration shall pass integration sanity test | prev post only 1`] = `
"<div class=\\"adjacent-post-links-poem\\">
  <nuxtlink to=\\"/poezja-314/mock-post/\\" class=\\"adjacent-post-links-poem__previous adjacent-post-link adjacent-post-link--previous\\"><span class=\\"adjacent-post-link__title\\">Biznes</span> <span class=\\"adjacent-post-link__label\\">Poprzednia</span></nuxtlink>
  <!---->
</div>"
`;
